deployment.yml
# Variables to be replaced by Environment
# APP_NAMESPACE_REGISTRY
# APP_HOST_URL
# APP_PROFILE
# 80
# APP_PROJECT_KUBE_NAMESPACE
# APP_INGRESS_NAME
# CI_COMMIT_TAG
# CI_PROJECT_NAME


#Create the namespace, if exists buid will pass
apiVersion: v1
kind: Namespace
metadata:
  name: APP_PROJECT_KUBE_NAMESPACE
  labels:
    name: APP_PROJECT_KUBE_NAMESPACE

---

apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    generation: 2
    name: APP_INGRESS_NAME
    namespace: APP_PROJECT_KUBE_NAMESPACE
  spec:
    backend:
      serviceName: default-https-backend
      servicePort: 443
    rules:
    - host: APP_HOST_URL
      http:
        paths:
        - backend:
            serviceName: CI_PROJECT_NAME
            servicePort: 80
          path: /
    tls:
    - hosts:
      - APP_HOST_URL
      secretName: rse-wildcard-ssl
  status:
    loadBalancer:
      ingress:
      - ip: 10.121.224.151
      - ip: 10.121.224.152
      - ip: 10.121.224.153
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: CI_PROJECT_NAME
  name: CI_PROJECT_NAME
  namespace: APP_PROJECT_KUBE_NAMESPACE
spec:
  replicas: 2
  selector:
    matchLabels:
      app: CI_PROJECT_NAME
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: CI_PROJECT_NAME
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - rsesaovl151
      containers:
      - env:
        - name: https_proxy
          value: 10.121.224.252:8080
        - name: http_proxy
          value: 10.121.224.252:8080
        - name: PORT
          value: "80"
        # APP Env comes below this comment
        image: docker-images.sao.hamburgsud.com/CI_PROJECT_NAME:CI_COMMIT_TAG-APP_PROFILE
        imagePullPolicy: IfNotPresent
        name: CI_PROJECT_NAME
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 80
          failureThreshold: 3
        resources:
          limits:
            cpu: 500m
            memory: 2500Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          privileged: true
          procMount: Default
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: APP_NAMESPACE_REGISTRY
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
